dialogue task end overlap issue resolved

--- a/agentassist-widget-sdk/UI/css/styles.css
+++ b/agentassist-widget-sdk/UI/css/styles.css
@@ -1247,6 +1247,7 @@ border: 1px solid transparent !important;
     text-align: center;
     position: relative;
     top: 0;
+    z-index: 1;
     /* z-index: 0; */
     /* bottom: -55px; */
     /* margin-top: 10px;
@@ -1267,6 +1268,7 @@ border: 1px solid transparent !important;
     background: #f8fafb;
     top: 0;
     left: -15px;
+    z-index: inherit;
 }
 .agent-assist-chat-container .body-data-container .dialog-task-data .dynamic-block-content .dilog-task-end.last-msg-white-bg .text-dialog-task-end{
     font-size: 14px;
